# job-fit

./: .gitignore  README.md  main.py  pyproject.toml
src/: agents.py
src/models/: agent_input.py  evidence_map.py  job_profile.py  output_report.py  resume_profile.py  tailoring_plan.py
src/pipelines/: execute_plan.py  job_profile_extraction.py  matching_score_pipeline.py  resume_extraction.py  tailoring_plan_pipeline.py
src/tools/: extract_job.py  output_file.py  pdf_utils.py  txt_file.py
