# File: `pyproject.toml`


[project]
name = "job-fit"
version = "0.1.0"
description = ""
requires-python = ">=3.11"
dependencies = [
  "gradio>=6.1.0",
  "openai>=1.0.0",
  "openai-agents>=0.6.3",
  "pydantic>=2.0,<3.0",
  "pymupdf>=1.26.7",
  "httpx>=0.24.0",
  "trafilatura>=1.6.5",
  "lxml>=4.9.2",
]
